@@ -1,4 +1,7 @@
-$Id: ChangeLog,v 1.318 2006/03/21 21:24:17 drsung Exp $
+$Id: ChangeLog,v 1.319 2006/03/27 09:34:05 freckle Exp $
+
+2006-03-27  Matthias Ringwald  <mringwal@inf.ethz.ch>
+	* include/sys/type.h: added u_longlong and longlong for emulation
 
 2006-03-21  Oliver Schulz  <olischulz@web.de>
 
